# callwhiz-sdk-python

./: .coverage  .gitignore  LICENSE  Makefile  README.md  calls.py  coverage.xml  pyproject.toml  test.py
callwhiz/: __init__.py  client.py  models.py
callwhiz-python/: delete_agent.py  list_agents.py  test_create_agent.py  test_sdk.py
callwhiz-python/callwhiz/: __init__.py  client.py  exceptions.py
examples/: quickstart.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_client.py  test_exceptions.py
