[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "callwhiz"
version = "1.0.0"
description = "Python SDK for CallWhiz AI Voice API"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx", "black", "ruff"]