[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "callwhiz"
version = "1.0.0"
description = "Python SDK for CallWhiz AI Voice API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zingaro AI LLC", email = "zingaroai.llc@gmail.com"}
]
keywords = ["callwhiz", "ai", "voice", "api", "sdk", "telephony"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-httpx>=0.21.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "respx>=0.20.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-httpx>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0"
]

[project.urls]
Homepage = "https://callwhiz.ai"
Repository = "https://github.com/zingaroai/callwhiz-python"
"Bug Tracker" = "https://github.com/zingaroai/callwhiz-python/issues"

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Hatch build configuration - FIXED FOR SRC LAYOUT
[tool.hatch.build.targets.wheel]
packages = ["src/callwhiz"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE"
]