[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "callwhiz"
version = "2.0.0"
description = "Python SDK for CallWhiz AI Voice API - Updated for Developer API v1.0"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zingaro AI LLC", email = "zingaroai.llc@gmail.com"}
]
keywords = ["callwhiz", "ai", "voice", "api", "sdk", "telephony", "multi-stage", "credits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-httpx>=0.21.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "respx>=0.20.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-httpx>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0"
]

[project.urls]
Homepage = "https://callwhiz.ai"
Repository = "https://github.com/zingaroai/callwhiz-python"
"Bug Tracker" = "https://github.com/zingaroai/callwhiz-python/issues"
Documentation = "https://docs.callwhiz.ai/sdk/python"
Changelog = "https://github.com/zingaroai/callwhiz-python/blob/main/CHANGELOG.md"

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=callwhiz",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests that require running API server",
    "slow: Slow tests",
    "credits: Tests that require credits/billing setup",
    "webhooks: Tests that require webhook endpoints",
]

[tool.coverage.run]
source = ["callwhiz"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Hatch build configuration - FIXED FOR CORRECT LAYOUT
[tool.hatch.build.targets.wheel]
packages = ["callwhiz"]

[tool.hatch.build.targets.sdist]
include = [
    "/callwhiz",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md"
]

# Black code formatting
[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

# Ruff linting
[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.isort]
known-first-party = ["callwhiz"]

# MyPy type checking
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true